# previewer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/previewer-app/: Cargo.toml
crates/previewer-app/src/: main.rs  signature_manager.rs
crates/previewer-core/: Cargo.toml
crates/previewer-core/src/: annotation.rs  geometry.rs  lib.rs  settings.rs  sidecar.rs  undo.rs
crates/previewer-core/tests/: serialization.rs  sidecar.rs
crates/previewer-core/tests/snapshots/: serialization__json_layout_is_stable.snap
crates/previewer-image/: Cargo.toml
crates/previewer-image/src/: decode.rs  heic.rs  lib.rs
crates/previewer-image/tests/: decode.rs  decode_heic.rs
crates/previewer-pdf/: Cargo.toml
crates/previewer-pdf/src/: annotate.rs  document.rs  extract.rs  lib.rs  lopdf_pass.rs  render.rs  search.rs
crates/previewer-pdf/tests/: annotate.rs  document.rs  render.rs  search.rs
crates/previewer-pdf/tests/fixtures/: mod.rs
crates/previewer-render/: Cargo.toml
crates/previewer-render/src/: lib.rs  selection.rs
crates/previewer-render/tests/: render.rs  selection.rs  transform.rs
crates/previewer-signature/: Cargo.toml
crates/previewer-signature/src/: import.rs  lib.rs  library.rs  stroke.rs
crates/previewer-signature/tests/: import.rs  library.rs  stroke.rs
data/: org.moma.Previewer.desktop
packaging/: README.md
packaging/arch/: PKGBUILD
scripts/: fetch-pdfium.sh  install-dev.sh
