[package]
name = "previewer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
kurbo = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
approx = { workspace = true }
tempfile = { workspace = true }
